--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
 						<h5>CHARLYN'S SEAFOOD ESSENTIALS</h5>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt
 							excepturi quas vero.</p>
-						<button data-bs-toggle="modal" data-bs-target="#register" class="btn btn-outline-light mt-3 mx-2">Get Started</button>
-						<button data-bs-toggle="modal" data-bs-target="#login" class="btn btn-outline-info  mt-3 mx-2 px-4">Sign In</button>
+						<button data-bs-toggle="modal" data-bs-target="#register"
+							class="btn btn-outline-light mt-3 mx-2">Get Started</button>
+						<button data-bs-toggle="modal" data-bs-target="#login"
+							class="btn btn-outline-info  mt-3 mx-2 px-4">Sign In</button>
 					</div>
 				</div>
 				<div class="carousel-item">
@@ -70,8 +72,10 @@
 						<h5>CHARLYN'S SEAFOOD ESSENTIALS</h5>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt
 							excepturi quas vero.</p>
-						<button data-bs-toggle="modal" data-bs-target="#register" class="btn btn-outline-light mt-3 mx-2">Get Started</button>
-						<button data-bs-toggle="modal" data-bs-target="#login" class="btn btn-outline-info  mt-3 mx-2 px-4">Sign In</button>
+						<button data-bs-toggle="modal" data-bs-target="#register"
+							class="btn btn-outline-light mt-3 mx-2">Get Started</button>
+						<button data-bs-toggle="modal" data-bs-target="#login"
+							class="btn btn-outline-info  mt-3 mx-2 px-4">Sign In</button>
 					</div>
 				</div>
 				<div class="carousel-item">
@@ -80,8 +84,10 @@
 						<h5>CHARLYN'S SEAFOOD ESSENTIALS</h5>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt
 							excepturi quas vero.</p>
-						<button data-bs-toggle="modal" data-bs-target="#register" class="btn btn-outline-light mt-3 mx-2">Get Started</button>
-						<button data-bs-toggle="modal" data-bs-target="#login" class="btn btn-outline-info  mt-3 mx-2 px-4">Sign In</button>
+						<button data-bs-toggle="modal" data-bs-target="#register"
+							class="btn btn-outline-light mt-3 mx-2">Get Started</button>
+						<button data-bs-toggle="modal" data-bs-target="#login"
+							class="btn btn-outline-info  mt-3 mx-2 px-4">Sign In</button>
 					</div>
 				</div>
 			</div>
@@ -97,34 +103,38 @@
 
 	<!-- Modal Start -->
 	<section>
-			<div class="modal mt-4" id="login">
-				<div class="modal-dialog modal-dialog-centered">
-					<div class="modal-content">
-						<div class="modal-body">
-							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-							<div class="form-area bg-white rounded-4">
-								<h1 class="text-center">Login</h1>
-								<form>
-									<div class="mb-2 mt-4">
-										<label for="exampleInputEmail1" class="form-label">Email</label>
-										<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-									</div>
-									<div class="mb-2">
-										<label for="exampleInputPassword1" class="form-label">Pasword</label>
-										<input type="password" class="form-control" id="exampleInputPassword1">
-									</div>
-									<div class="mb-2">
-										<label for="exampleInputPassword1" class="form-label">Confirm Password</label>
-										<input type="password" class="form-control" id="exampleInputPassword1">
-									</div>
-									<button type="submit" class="btn mt-3"><a  class="login text-decoration-none text-dark" href="/pages/customer/home.html">LOGIN</a></button>
-									<p>Dont have an account?<a class="login text-decoration-none mx-2" href="#">Signup</a></p>
-								</form>
-							</div>
+		<div class="modal mt-4" id="login">
+			<div class="modal-dialog modal-dialog-centered">
+				<div class="modal-content">
+					<div class="modal-body">
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						<div class="form-area bg-white rounded-4">
+							<h1 class="text-center">Login</h1>
+							<form>
+								<div class="mb-2 mt-4">
+									<label for="exampleInputUsername1" class="form-label">Username</label>
+									<input type="username" class="form-control" id="exampleInputUsername1"
+										aria-describedby="emailHelp">
+								</div>
+								<div class="mb-2">
+									<label for="exampleInputEmail1" class="form-label">Email</label>
+									<input type="Email" class="form-control" id="exampleInputEmail1"
+										aria-describedby="emailHelp">
+								</div>
+								<div class="mb-2">
+									<label for="exampleInputPassword1" class="form-label">Pasword</label>
+									<input type="password" class="form-control" id="exampleInputPassword1">
+								</div>
+								<button type="submit" class="btn mt-3"><a class="login text-decoration-none text-dark"
+										href="/pages/customer/home.html">LOGIN</a></button>
+								<p>Dont have an account?<a class="login text-decoration-none mx-2" href="#">Signup</a>
+								</p>
+							</form>
 						</div>
-					  </div>
+					</div>
 				</div>
 			</div>
+		</div>
 	</section>
 
 	<section>
@@ -142,7 +152,8 @@
 								</div>
 								<div class="mb-2">
 									<label for="exampleInputEmail1" class="form-label">Email</label>
-									<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+									<input type="email" class="form-control" id="exampleInputEmail1"
+										aria-describedby="emailHelp">
 								</div>
 								<div class="mb-2">
 									<label for="exampleInputPassword1" class="form-label">Pasword</label>
@@ -153,11 +164,12 @@
 									<input type="password" class="form-control" id="exampleInputPassword1">
 								</div>
 								<button type="submit" class="btn mt-3">REGISTER</button>
-								<p>Already have an account?<a class="login text-decoration-none mx-2" href="#">Sign In</a></p>
+								<p>Already have an account?<a class="login text-decoration-none mx-2" href="#">Sign
+										In</a></p>
 							</form>
 						</div>
 					</div>
-				  </div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -177,7 +189,8 @@
 							Thank you for choosing our seafood website as your go-to destination for all your seafood
 							needs.
 						</p>
-						<button data-bs-toggle="modal" data-bs-target="#login" class="btn btn-success">Order Now</button>
+						<button data-bs-toggle="modal" data-bs-target="#login" class="btn btn-success">Order
+							Now</button>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-12 col-12">
@@ -451,6 +464,7 @@
 	<!-- Footer End -->
 
 	<!-- Script -->
+	<script src="/js/collapse.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
