--- a/pages/customer/history.html
+++ b/pages/customer/history.html
@@ -40,7 +40,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Note
+                                Cart
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="purchase.html">Purchase</a></li>
@@ -141,8 +141,8 @@
                                             <td data-label="ID">1</td>
                                             <td data-label="NAME">Karlo</td>
                                             <td data-label="EMAIL">carlngujo@gmail.com</td>
-                                            <td data-label="PROFILE PIC">asd</td>
-                                            <td data-label="ROLE">Ste</td>
+                                            <td data-label="PROFILE PIC">Ibabao Cordova</td>
+                                            <td data-label="ROLE">10-10-2023</td>
                                             <td data-label="ACTION">
                                                 <button data-bs-toggle="modal" data-bs-target="#history"
                                                 class="btn btn-sm btn-info mx-1">View</button>
@@ -207,6 +207,7 @@
 
     <!--Start Bootstrap -->
     <script src="/js/script.js"></script>
+    <script src="/js/collapse.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- End Bootstrap -->
