--- a/pages/customer/product.html
+++ b/pages/customer/product.html
@@ -40,7 +40,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Note
+                                Cart
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="purchase.html">Purchase</a></li>
@@ -222,6 +222,7 @@
                                             src="/images/tamban.jpg"></div>
                                     <p class="price text-decoration-none"><i
                                             class="fa-sharp fa-solid fa-peso-sign"></i>200/kg</p>
+                                            
                                     <div>
                                         <button data-bs-toggle="modal" data-bs-target="#order"
                                             class="btn btn-success btn-sm mt-3 mx-2">Order</button>
@@ -271,7 +272,7 @@
                                                 </select>
                                                 <div class="mb-2">
                                                     <input type="file" name="Uploadfile">
-                                                    <input type="image" src="submit.jpg" alt="Add">
+                                                    <!-- <input type="image" src="submit.jpg" alt="Add"> -->
                                                 </div>
                                             </div>
                                             <button type="submit" class="mt-3"><a
@@ -333,6 +334,7 @@
 
     <!--Start Bootstrap -->
     <script src="/js/script.js"></script>
+    <script src="/js/collapse.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="/js/sweetalert.js"></script>
