--- a/pages/customer/purchase.html
+++ b/pages/customer/purchase.html
@@ -40,7 +40,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Note
+                                Cart
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="purchase.html">Purchase</a></li>
@@ -58,6 +58,7 @@
                                 <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
                                 <li><a class="dropdown-item" href="services.html">Services</a></li>
                                 <li><a class="dropdown-item" href="profile.html">Profile</a></li>
+                                <li><a class="dropdown-item" href="profile.html">Logout</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -141,23 +142,8 @@
                                             <td data-label="ID">1</td>
                                             <td data-label="NAME">Karlo</td>
                                             <td data-label="EMAIL">carlngujo@gmail.com</td>
-                                            <td data-label="PROFILE PIC">asd</td>
-                                            <td data-label="ROLE">Ste</td>
-                                            <td data-label="ACTION">
-                                                <button data-bs-toggle="modal" data-bs-target="#edit"
-                                                    class="btn btn-sm btn-info mx-1">View</button>
-                                                <button data-bs-toggle="modal" data-bs-target="#login"
-                                                    class="btn btn-sm btn-dark">Add More</button>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                    <tbody>
-                                        <tr>
-                                            <td data-label="ID">1</td>
-                                            <td data-label="NAME">Karlo</td>
-                                            <td data-label="EMAIL">carlngujo@gmail.com</td>
-                                            <td data-label="PROFILE PIC">asd</td>
-                                            <td data-label="ROLE">Ste</td>
+                                            <td data-label="PROFILE PIC">Ibabao Cordova</td>
+                                            <td data-label="ROLE">10-12-2023</td>
                                             <td data-label="ACTION">
                                                 <button data-bs-toggle="modal" data-bs-target="#edit"
                                                     class="btn btn-sm btn-info mx-1">View</button>
@@ -230,6 +216,7 @@
 
     <!--Start Bootstrap -->
     <script src="/js/script.js"></script>
+    <script src="/js/collapse.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- End Bootstrap -->
