--- a/pages/customer/services.html
+++ b/pages/customer/services.html
@@ -40,7 +40,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
-                                Note
+                                Cart
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="purchase.html">Purchase</a></li>
@@ -174,6 +174,7 @@
 
     <!--Start Bootstrap -->
     <script src="/js/script.js"></script>
+    <script src="/js/collapse.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- End Bootstrap -->
