--- a/pages/owner/p-owner.html
+++ b/pages/owner/p-owner.html
@@ -12,7 +12,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/style/global.css">
     <link rel="stylesheet" href="/style/responsive.css">
-    <title>Gallery | Page</title>
+    <title>Products | Page</title>
 </head>
 
 <body>
@@ -29,35 +29,29 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-uppercase">
                         <li class="nav-item">
-                            <a class="nav-link" href="product.html">Products</a>
+                            <a class="nav-link" href="d-owner.html">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link" href="p-owner.html">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About Us</a>
+                            <a class="nav-link" href="o-owner.html">Order</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Cart
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="purchase.html">Purchase</a></li>
-                                <li><a class="dropdown-item" href="basket.html">My Basket</a></li>
-                                <li><a class="dropdown-item" href="history.html">History</a></li>
-                            </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="m-owner.html">Message</a>
                         </li>
+
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                 More
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="recipes.html">Recipes</a></li>
-                                <li><a class="dropdown-item" href="gallery.html">Gallery</a></li>
-                                <li><a class="dropdown-item" href="services.html">Services</a></li>
-                                <li><a class="dropdown-item" href="profile.html">Profile</a></li>
+                                <li><a class="dropdown-item" href="b-owner.html">Basket</a></li>
+                                <li><a class="dropdown-item" href="r-owner.html">Recipes</a></li>
+                                <li><a class="dropdown-item" href="g-owner.html">Gallery</a></li>
+                                <li><a class="dropdown-item" href="pro-owner.html">Profile</a></li>
+                                <li><a class="dropdown-item" href="#">Logout</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -77,28 +71,28 @@
                                 <li class="nav__item">
                                     <a href="/pages/customer/home.html" class="nav__link text-decoration-none">
                                         <i class="bi bi-house-door-fill nav__icon"></i>
-                                        <span class="nav__name">Home</span>
+                                        <span class="nav__name">Product</span>
                                     </a>
                                 </li>
 
                                 <li class="nav__item">
                                     <a href="/pages/customer/gallery.html" class="nav__link text-decoration-none">
                                         <i class="bi bi-images nav__icon"></i>
-                                        <span class="nav__name">Gallery</span>
+                                        <span class="nav__name">Order</span>
                                     </a>
                                 </li>
 
                                 <li class="nav__item">
                                     <a href="/pages/customer/about.html" class="nav__link text-decoration-none">
                                         <i class="bi bi-people-fill nav__icon"></i>
-                                        <span class="nav__name">About</span>
+                                        <span class="nav__name">Basket</span>
                                     </a>
                                 </li>
 
                                 <li class="nav__item">
                                     <a href="/pages/customer/services.html" class="nav__link text-decoration-none">
                                         <i class="bi bi-gear-wide nav__icon"></i>
-                                        <span class="nav__name">Services</span>
+                                        <span class="nav__name">Message</span>
                                     </a>
                                 </li>
 
@@ -116,64 +110,67 @@
             <!-- End Bottom Tab -->
 
             <!-- Start Body -->
-            <section class="products pb-5 mt-5" id="products">
+            <section class="products" id="products">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-12">
-                            <div class="section-header text-center pb-5">
-                                <h1 class="fw-bold mt-5">Gallery</h1>
+                        <div class="col-md-12 mt-5">
+                            <div class="section-header text-center pb-4">
+                                <h1 class="fw-bold mt-5">Products List</h1>
                             </div>
+                        </div>
+                        <div class="col mb-3">
+                            <input type="search" class="form-control" placeholder="Search Products">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 col-md-12 col-lg-6 mb-2">
+                        <div class="col-12 col-md-12 col-lg-4 mb-2">
                             <div class="card text-center pb-2">
                                 <div class="card-body">
                                     <h3 class="card-title">Danggit</h3>
                                     <div class="img-area mb-4 text-center"><img class="fish" alt=""
                                             src="/images/Danggit.jpg"></div>
+                                    <p class="price text-decoration-none">Remaining kilo: <small
+                                            class="text-danger">20kg</small></p>
                                     <div>
-                                        <button data-bs-toggle="modal" data-bs-target="#view"
-                                            class="btn btn-info btn-sm mt-3 mx-2">View</button>
+                                        <select name="" id="">
+                                            <option value=""> <button
+                                                    class="btn btn-warning btn-sm mt-3 mx-2">Available</button></option>
+                                            <option value=""> <button class="btn btn-warning btn-sm mt-3 mx-2">Not
+                                                    Available</button></option>
+                                        </select>
                                     </div>
+                                    <small class="text-info mt-2">Added 10-12-223</small>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-12 col-lg-6 mb-2">
+                        <div class="col-12 col-md-12 col-lg-4 mb-2">
                             <div class="card text-center pb-2">
                                 <div class="card-body">
-                                    <h3 class="card-title">Danggit</h3>
+                                    <h3 class="card-title">Bangus</h3>
                                     <div class="img-area mb-4 text-center"><img class="fish" alt=""
-                                            src="/images/Danggit.jpg"></div>
+                                            src="/images/bangus.jpg"></div>
+                                    <p class="price text-decoration-none">Remaining kilo: <small
+                                            class="text-danger">35kg</small></p>
                                     <div>
-                                        <button data-bs-toggle="modal" data-bs-target="#view"
-                                            class="btn btn-info btn-sm mt-3 mx-2">View</button>
+                                        <select name="" id="">
+                                            <option value=""> <button
+                                                    class="btn btn-warning btn-sm mt-3 mx-2">Available</button></option>
+                                            <option value=""> <button class="btn btn-warning btn-sm mt-3 mx-2">Not
+                                                    Available</button></option>
+                                        </select>
                                     </div>
+                                    <small class="text-info mt-2">Added 10-12-223</small>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-12 col-lg-6 mb-2">
+                        <div class="col-12 col-md-12 col-lg-4 mb-2">
                             <div class="card text-center pb-2">
                                 <div class="card-body">
-                                    <h3 class="card-title">Danggit</h3>
-                                    <div class="img-area mb-4 text-center"><img class="fish" alt=""
-                                            src="/images/Danggit.jpg"></div>
                                     <div>
-                                        <button data-bs-toggle="modal" data-bs-target="#view"
-                                            class="btn btn-info btn-sm mt-3 mx-2">View</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-12 col-lg-6 mb-2">
-                            <div class="card text-center pb-2">
-                                <div class="card-body">
-                                    <h3 class="card-title">Danggit</h3>
-                                    <div class="img-area mb-4 text-center"><img class="fish" alt=""
-                                            src="/images/Danggit.jpg"></div>
-                                    <div>
-                                        <button data-bs-toggle="modal" data-bs-target="#view"
-                                            class="btn btn-info btn-sm mt-3 mx-2">View</button>
+
+                                        <button class="btn btn-success btn-sm mt-3 mx-2" data-bs-target="#add"
+                                            data-bs-toggle="modal">Add
+                                            Product</button>
                                     </div>
                                 </div>
                             </div>
@@ -186,49 +183,101 @@
             <!-- Modal Start -->
             <section>
                 <div class="container">
-                    <div class="modal mt-4" id="view">
+                    <div class="modal fade" id="add" aria-hidden="true" aria-labelledby="exampleModalToggleLabel"
+                        tabindex="-1">
                         <div class="modal-dialog modal-dialog-centered">
-                            <div class="modal-content mt-4">
+                            <div class="modal-content">
                                 <div class="modal-body">
                                     <button type="button" class="btn-close" data-bs-dismiss="modal"
                                         aria-label="Close"></button>
                                     <div class="form-area bg-white rounded-4">
-                                        <h1 class="text-center text-info">Viewing...</h1>
+                                        <h1 class="text-center">Add New Product</h1>
                                         <form>
                                             <div class="mb-2 mt-4">
-                                                <input type="text" class="form-control" placeholder="Carl" readonly>
+                                                <input type="file" name="Uploadfile">
                                             </div>
                                             <div class="mb-2">
-                                                <input type="text" class="form-control" placeholder="Ngojo" readonly>
+                                                <input type="text" class="form-control" placeholder="Product Name">
                                             </div>
                                             <div class="mb-2">
-                                                <input type="text" class="form-control" placeholder="Ibabao Cordova" readonly>
+                                                <input type="text" class="form-control" placeholder="Product Price">
                                             </div>
                                             <div class="mb-2">
-                                                <label  for="">Caption:</label>
-                                                <input type="text" class="form-control" placeholder="Thankyou for Trusting CSE ^_^ " readonly>
+                                                <input type="text" class="form-control" placeholder="Product kilo">
                                             </div>
-                                            <div class="mb-2">
-                                                <label for="">Picture</label>
-                                                    <input type="image" src="..">
-                                            </div>
-                                        </form>
                                     </div>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button class="btn btn-primary" data-bs-target="#exampleModalToggle2"
+                                        data-bs-toggle="modal">Review</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal fade" id="exampleModalToggle2" aria-hidden="true"
+                        aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                    <div class="form-area bg-white rounded-4">
+                                        <h1 class="text-center">Review Product</h1>
+                                        <form>
+                                            <div class="mb-2 mt-4">
+                                                <input type="image" name="image">
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="Danggit" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="300" readonly>
+                                            </div>
+                                            <div class="mb-2">
+                                                <input type="text" class="form-control" placeholder="20kg" readonly>
+                                            </div>
+                                    </div>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button class="btn btn-warning" data-bs-target="#exampleModalToggle"
+                                        data-bs-toggle="modal">Edit</button>
+                                    <button class="btn btn-primary" data-bs-target="#exampleModalToggle"
+                                        data-bs-toggle="modal">Add</button>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
-            <!-- Modal End -->
         </div>
+        </section>
+        <!-- Modal End -->
+    </div>
     </div>
 
     <!--Start Bootstrap -->
     <script src="/js/script.js"></script>
-    <script src="/js/collapse.js" ></script>
+    <script src="/js/collapse.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/js/sweetalert.js"></script>
+    <!-- <script>
+        $("#order").click(function() {
+            var InfoComplete = $("InfoComplete").val();
+            
+            if(InfoComplete == '') {
+                swal({
+                title: "Incomplete",
+                text: "Please complete your Information",
+                icon: "warning",
+                button: "Okay",
+                }); 
+            }else {
+                redirect('Order Modal')
+            }
+        });
+    </script> -->
     <!-- End Bootstrap -->
 </body>
 
